Started replacing Observable and Observer with Flow API. Applied code cleanup stuff.